--- a/webroot/adm/key-acl.html
+++ b/webroot/adm/key-acl.html
@@ -27,9 +27,9 @@ import { initializeOutput } from '/js/output.js';
 
 document.addEventListener('DOMContentLoaded', function () {
   const operationConfig = {
-    'read-only': [
+    read: [
       {
-        id: 'doList',
+        id: 'listAcls',
         title: 'List ACLs',
         role: 'maintainer',
         inputs: [],
