--- a/webroot/adm/operator-key.html
+++ b/webroot/adm/operator-key.html
@@ -24,10 +24,45 @@ import { initializeOperations } from '/js/operations.js';
 import { initializeOutput } from '/js/output.js';
 
 document.addEventListener('DOMContentLoaded', function () {
+  const operatorNameInput = {
+    name: 'operatorName',
+    label: 'Operator Name',
+    required: true,
+    size: 2
+  };
+
+  const protocolInput = {
+    name: 'protocol',
+    label: 'Protocol',
+    required: true,
+    size: 2
+  };
+
+  const siteIdInput = {
+    name: 'siteId',
+    label: 'Site ID',
+    required: true,
+    type: 'number'
+  };
+
+  const rolesMultilineInput = {
+    name: 'roles',
+    label: 'Roles',
+    required: false,
+    size: 'multi-line',
+    placeholder: 'Enter roles separated by commas'
+  };
+
+  const publicOperatorCheckboxInput = {
+    name: 'operatorType',
+    label: 'Public Operator',
+    type: 'checkbox'
+  };
+
   const operationConfig = {
-    'read-only': [
+    read: [
         {
-          id: 'doMeta',
+          id: 'getOperatorMetadata',
           title: 'Get Metadata',
           role: 'maintainer',
           inputs: [],
@@ -37,7 +72,7 @@ document.addEventListener('DOMContentLoaded', function () {
           }
         },
         {
-          id: 'doList',
+          id: 'listOperatorKeys',
           title: 'List Operator Keys',
           role: 'maintainer',
           inputs: [],
@@ -47,68 +82,22 @@ document.addEventListener('DOMContentLoaded', function () {
           }
         },
         {
-          id: 'doReveal',
+          id: 'revealOperatorKey',
           title: 'Reveal Operator Key',
           role: 'maintainer',
-          inputs: [
-            {
-              id: 'operatorName-reveal',
-              name: 'operatorName',
-              label: 'Operator Name',
-              required: true,
-              size: 2
-            }
-          ],
+          inputs: [operatorNameInput],
           apiCall: {
             method: 'GET',
             getUrl: (inputs) => `/api/operator/reveal?name=${encodeURIComponent(inputs.operatorName)}`
           }
         }
       ],
-    'write': [
+    write: [
         {
-          id: 'doAdd',
+          id: 'addOperatorKey',
           title: 'Add Operator Key',
           role: 'maintainer',
-          inputs: [
-            {
-              id: 'operatorName-add',
-              name: 'operatorName',
-              label: 'Operator Name',
-              required: true,
-              size: 2
-            },
-            {
-              id: 'protocol-add',
-              name: 'protocol',
-              label: 'Protocol',
-              required: true,
-              size: 2
-            },
-            {
-              id: 'siteId-add',
-              name: 'siteId',
-              label: 'Site ID',
-              required: true,
-              size: 1,
-              type: 'number'
-            },
-            {
-              id: 'roles-add',
-              name: 'roles',
-              label: 'Roles',
-              required: false,
-              size: 'multi-line',
-              placeholder: 'Enter roles separated by commas'
-            },
-            {
-              id: 'operatorType-add',
-              name: 'operatorType',
-              label: 'Public Operator',
-              type: 'checkbox',
-              size: 1
-            }
-          ],
+          inputs: [operatorNameInput, protocolInput, siteIdInput, rolesMultilineInput, publicOperatorCheckboxInput],
           apiCall: {
             method: 'POST',
             getUrl: (inputs) => {
@@ -125,96 +114,20 @@ document.addEventListener('DOMContentLoaded', function () {
           }
         },
         {
-          id: 'doEnable',
-          title: 'Enable Operator Key',
-          role: 'maintainer',
-          inputs: [
-            {
-              id: 'operatorName-enable',
-              name: 'operatorName',
-              label: 'Operator Name',
-              required: true,
-              size: 2
-            }
-          ],
-          preProcess: (inputs) => {
-            const confirmationMessage = `Are you sure you want to enable ${inputs.operatorName}?`;
-            return confirm(confirmationMessage) ? inputs : null;
-          },
-          apiCall: {
-            method: 'POST',
-            getUrl: (inputs) => `/api/operator/enable?name=${encodeURIComponent(inputs.operatorName)}`
-          }
-        },
-        {
-          id: 'doSetSite',
+          id: 'updateOperatorSite',
           title: 'Update Site',
           role: 'maintainer',
-          inputs: [
-            {
-              id: 'operatorName-setSite',
-              name: 'operatorName',
-              label: 'Operator Name',
-              required: true,
-              size: 2
-            },
-            {
-              id: 'siteId-setSite',
-              name: 'siteId',
-              label: 'Site ID',
-              required: true,
-              size: 1,
-              type: 'number'
-            }
-          ],
+          inputs: [operatorNameInput, siteIdInput],
           apiCall: {
             method: 'POST',
             getUrl: (inputs) => `/api/operator/update?name=${encodeURIComponent(inputs.operatorName)}&site_id=${encodeURIComponent(inputs.siteId)}`
           }
         },
         {
-          id: 'doDisable',
-          title: 'Disable Operator Key',
-          role: 'elevated',
-          inputs: [
-            {
-              id: 'operatorName-disable',
-              name: 'operatorName',
-              label: 'Operator Name',
-              required: true,
-              size: 2
-            }
-          ],
-          description: 'Disabling an operator key will keep the private operators running, but will eventually cause the operator to stop serving client requests. Before proceeding, ensure there is no valid traffic, and confirm that the participant has provided consent.',
-          preProcess: (inputs) => {
-            const confirmationMessage = `Disabling an operator key will keep the private operators running, but will eventually cause the operator to stop serving client requests.\n\nBefore proceeding, ensure there is no valid traffic, and confirm that the participant has provided consent.\n\nAre you sure you want to disable ${inputs.operatorName}?`;
-            return confirm(confirmationMessage) ? inputs : null;
-          },
-          apiCall: {
-            method: 'POST',
-            getUrl: (inputs) => `/api/operator/disable?name=${encodeURIComponent(inputs.operatorName)}`
-          }
-        },
-        {
-          id: 'doSetOperatorType',
+          id: 'updateOperatorType',
           title: 'Update Public/Private Operator Type',
           role: 'elevated',
-          inputs: [
-            {
-              id: 'operatorName-setType',
-              name: 'operatorName',
-              label: 'Operator Name',
-              required: true,
-              size: 2
-            },
-            {
-              id: 'operatorType-setType',
-              name: 'operatorType',
-              label: 'Public Operator',
-              type: 'checkbox',
-              size: 1
-            }
-          ],
+          inputs: [operatorNameInput, publicOperatorCheckboxInput],
           apiCall: {
             method: 'POST',
             getUrl: (inputs) => {
@@ -224,46 +137,46 @@ document.addEventListener('DOMContentLoaded', function () {
           }
         },
         {
-          id: 'doSetRoles',
+          id: 'setOperatorRoles',
           title: 'Set Roles',
           role: 'elevated',
-          inputs: [
-            {
-              id: 'operatorName-setRoles',
-              name: 'operatorName',
-              label: 'Operator Name',
-              required: true,
-              size: 2
-            },
-            {
-              id: 'roles-setRoles',
-              name: 'roles',
-              label: 'Roles',
-              required: true,
-              size: 'multi-line',
-              placeholder: 'Enter roles separated by commas'
-            }
-          ],
+          inputs: [operatorNameInput, rolesMultilineInput],
           apiCall: {
             method: 'POST',
             getUrl: (inputs) => `/api/operator/roles?name=${encodeURIComponent(inputs.operatorName)}&roles=${encodeURIComponent(inputs.roles)}`
           }
         }
       ],
-    'danger-zone': [
+    danger: [
         {
-          id: 'doDel',
+          id: 'enableOperatorKey',
+          title: 'Enable Operator Key',
+          role: 'maintainer',
+          inputs: [operatorNameInput],
+          description: 'This will enable the operator key, allowing it to serve client requests.',
+          confirmationText: 'Enabling this operator key will allow it to serve client requests. This is a significant operational change.',
+          apiCall: {
+            method: 'POST',
+            getUrl: (inputs) => `/api/operator/enable?name=${encodeURIComponent(inputs.operatorName)}`
+          }
+        },
+        {
+          id: 'disableOperatorKey',
+          title: 'Disable Operator Key',
+          role: 'elevated',
+          inputs: [operatorNameInput],
+          description: 'Disabling an operator key will keep the private operators running, but will eventually cause the operator to stop serving client requests. Before proceeding, ensure there is no valid traffic, and confirm that the participant has provided consent.',
+          confirmationText: 'Disabling an operator key will keep the private operators running, but will eventually cause the operator to stop serving client requests. Before proceeding, ensure there is no valid traffic, and confirm that the participant has provided consent.',
+          apiCall: {
+            method: 'POST',
+            getUrl: (inputs) => `/api/operator/disable?name=${encodeURIComponent(inputs.operatorName)}`
+          }
+        },
+        {
+          id: 'deleteOperatorKey',
           title: 'Delete Operator Key',
           role: 'superuser',
-          inputs: [
-            {
-              id: 'operatorName-delete',
-              name: 'operatorName',
-              label: 'Operator Name',
-              required: true,
-              size: 2
-            }
-          ],
+          inputs: [operatorNameInput],
           description: 'This will permanently delete the operator key. This action cannot be undone and will immediately stop all operations for this operator.',
           apiCall: {
             method: 'POST',
